load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "meson")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

SIZES = [
    "default",
    "tiny",
]

[
    meson(
        name = "meson_lib_" + size,
        lib_source = "//meson_simple/code:srcs",
        out_static_libs = ["liba.a"],
        resource_size = size,
    )
    for size in SIZES
]

[
    cc_test(
        name = "test_lib_" + size,
        srcs = [
            "test_libb.cpp",
        ],
        deps = [
            ":meson_lib_" + size,
        ],
    )
    for size in SIZES
]

meson(
    name = "meson_lib-introspect",
    lib_source = "//meson_simple/code:srcs",
    out_data_files = ["introspect.json"],
    out_include_dir = "",
    targets = ["introspect"],
)

sh_test(
    name = "test_introspect",
    srcs = ["test_introspect.sh"],
    args = ["$(location meson_lib-introspect)"],
    data = [":meson_lib-introspect"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
