load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "meson")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

SIZES = [
    "default",
    "tiny",
]

[
    meson(
        name = "meson_lib_" + size,
        lib_source = "//meson_simple/code:srcs",
        out_static_libs = ["liba.a"],
        resource_size = size,
    )
    for size in SIZES
]

[
    cc_test(
        name = "test_lib_" + size,
        size = "small",
        srcs = [
            "test_libb.cpp",
        ],
        deps = [
            ":meson_lib_" + size,
        ],
    )
    for size in SIZES
]

meson(
    name = "meson_shared_lib",
    lib_source = "//meson_simple/code:srcs",
    options = {
        "build_shared": "true",
    },
    out_shared_libs = select({
        "@platforms//os:macos": ["liba_shared.dylib"],
        "//conditions:default": ["liba_shared.so"],
    }),
    shared_ldflags_option = "shared_link_flags",
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_test(
    name = "test_shared_lib",
    size = "small",
    srcs = [
        "test_libb.cpp",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":meson_shared_lib",
    ],
)

meson(
    name = "meson_lib-introspect",
    lib_source = "//meson_simple/code:srcs",
    out_data_files = ["introspect.json"],
    out_include_dir = "",
    targets = ["introspect"],
)

sh_test(
    name = "test_introspect",
    size = "small",
    srcs = ["test_introspect.sh"],
    args = ["$(location meson_lib-introspect)"],
    data = [":meson_lib-introspect"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
