load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "meson")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

SIZES = [
    "default",
    "tiny",
]

[
    meson(
        name = "meson_lib_" + size,
        lib_source = "//meson_simple/code:srcs",
        out_static_libs = ["liba.a"],
        resource_size = size,
    )
    for size in SIZES
]

[
    cc_test(
        name = "test_lib_" + size,
        size = "small",
        srcs = [
            "test_libb.cpp",
        ],
        deps = [
            ":meson_lib_" + size,
        ],
    )
    for size in SIZES
]

meson(
    name = "meson_shared_lib",
    lib_source = "//meson_simple/code:srcs",
    options = {
        "build_shared": "true",
    },
    # On Windows the import library (lib/) is what consumers link against; the
    # runtime DLL goes to bin/ (out_dll_dir).
    out_interface_libs = select({
        "@platforms//os:windows": ["a_shared.lib"],
        "//conditions:default": [],
    }),
    out_shared_libs = select({
        "@platforms//os:macos": ["liba_shared.dylib"],
        "@platforms//os:windows": ["a_shared.dll"],
        "//conditions:default": ["liba_shared.so"],
    }),
    shared_ldflags_option = "shared_link_flags",
)

cc_test(
    name = "test_shared_lib",
    size = "small",
    srcs = [
        "test_libb.cpp",
    ],
    # On windows, dlls need to be copied to the binary directory to run, and
    # --features=copy_dynamic_libraries_to_binary is broken:
    # https://github.com/bazelbuild/rules_cc/pull/623
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":meson_shared_lib",
    ],
)

# TODO: This primarily serves to exercise meson_shared_lib's build + link on
# windows, where test_shared_lib above cannot run. Once rules_cc #623 is fixed,
# feel free to delete and un-gate test_shared_lib.
cc_binary(
    name = "binary_shared_lib",
    srcs = ["test_libb.cpp"],
    deps = [":meson_shared_lib"],
)

build_test(
    name = "shared_lib_just_build",
    targets = [
        ":binary_shared_lib",
    ],
)

meson(
    name = "meson_lib-introspect",
    lib_source = "//meson_simple/code:srcs",
    out_data_files = ["introspect.json"],
    out_include_dir = "",
    targets = ["introspect"],
)

sh_test(
    name = "test_introspect",
    size = "small",
    srcs = ["test_introspect.sh"],
    args = ["$(location meson_lib-introspect)"],
    data = [":meson_lib-introspect"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
