load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "ninja")

ninja(
    name = "ninja_lib",
    build_data = ["//:cc_wrapper.sh"],
    env = {
        "CC_WRAPPER": "$(execpath //:cc_wrapper.sh)",
    },
    lib_source = "//ninja_simple/code:srcs",
    out_static_libs = ["liba.a"],
    targets = [
        "",
        "install",
    ],
)

cc_test(
    name = "test_lib",
    size = "small",
    srcs = [
        "test_libb.cpp",
    ],
    deps = [
        ":ninja_lib",
    ],
)
