load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "ninja")

SIZES = [
    "default",
    "tiny",
]

[
    ninja(
        name = "ninja_lib_" + size,
        build_data = ["//:cc_wrapper.sh"],
        env = {
            "CC_WRAPPER": "$(execpath //:cc_wrapper.sh)",
        },
        lib_source = "//ninja_simple/code:srcs",
        out_static_libs = ["liba.a"],
        resource_size = size,
        targets = [
            "",
            "install",
        ],
    )
    for size in SIZES
]

[
    cc_test(
        name = "test_lib_" + size,
        size = "small",
        srcs = [
            "test_libb.cpp",
        ],
        deps = [
            ":ninja_lib_" + size,
        ],
    )
    for size in SIZES
]
