load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

configure_make(
    name = "postgresql",
    binaries = [
        "postgres",
        "initdb",
        "pg_ctl",
        "createdb",
    ],
    configure_options = [
        "--without-zlib",
        "--without-readline",
    ],
    include_share_dir = True,
    lib_source = "@postgresql//:all",
    shared_libraries = [
        "ascii_and_mic.so",
        "cyrillic_and_mic.so",
        "dict_snowball.so",
        "euc2004_sjis2004.so",
        "euc_cn_and_mic.so",
        "euc_jp_and_sjis.so",
        "euc_kr_and_mic.so",
        "euc_tw_and_big5.so",
        "latin2_and_win1250.so",
        "latin_and_mic.so",
        "libecpg.so",
        "libecpg_compat.so",
        "libpgtypes.so",
        "libpq.so",
        "libpqwalreceiver.so",
        "pgoutput.so",
        "plpgsql.so",
        "utf8_and_ascii.so",
        "utf8_and_big5.so",
        "utf8_and_cyrillic.so",
        "utf8_and_euc2004.so",
        "utf8_and_euc_cn.so",
        "utf8_and_euc_jp.so",
        "utf8_and_euc_kr.so",
        "utf8_and_euc_tw.so",
        "utf8_and_gb18030.so",
        "utf8_and_gbk.so",
        "utf8_and_iso8859.so",
        "utf8_and_iso8859_1.so",
        "utf8_and_johab.so",
        "utf8_and_sjis.so",
        "utf8_and_sjis2004.so",
        "utf8_and_uhc.so",
        "utf8_and_win.so",
    ],
    static_libraries = [
        "libecpg.a",
        "libecpg_compat.a",
        "libpgcommon.a",
        "libpgcommon_shlib.a",
        "libpgfeutils.a",
        "libpgport.a",
        "libpgport_shlib.a",
        "libpgtypes.a",
        "libpq.a",
    ],
)
