load("@bazel_skylib//rules:build_test.bzl", "build_test")

build_test(
    name = "build_test",
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    targets = [
        "@rust_example//:libz-ng-sys",
    ],
)
