load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//foreign_cc/private/shell_toolchain/polymorphism:bzl_srcs",
        "//foreign_cc/private/shell_toolchain/toolchains:bzl_srcs",
    ],
)
