load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "runnable_binary_wrapper.sh",
    "settings.sh.in",
])

bzl_library(
    name = "cc_toolchain_util",
    srcs = ["cc_toolchain_util.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":runtime_library_search_directories",
        "@bazel_skylib//lib:collections",
        "@bazel_tools//tools/build_defs/cc:action_names.bzl",
        "@bazel_tools//tools/cpp:toolchain_utils.bzl",
    ],
)

bzl_library(
    name = "runtime_library_search_directories",
    srcs = ["runtime_library_search_directories.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        "@bazel_features//:features",
        "@bazel_skylib//lib:paths",
        "@rules_cc//cc:bzl_srcs",
    ],
)

bzl_library(
    name = "cmake_script",
    srcs = ["cmake_script.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":cc_toolchain_util",
        "//foreign_cc/private:make_script",
    ],
)

bzl_library(
    name = "configure_script",
    srcs = ["configure_script.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":make_env_vars",
        ":make_script",
    ],
)

bzl_library(
    name = "framework",
    srcs = ["framework.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":cc_toolchain_util",
        ":detect_root",
        ":detect_xcompile.bzl",
        ":resource_sets",
        ":run_shell_file_utils",
        ":runtime_library_search_directories",
        "//foreign_cc:providers",
        "//foreign_cc/private/framework:helpers",
        "//foreign_cc/private/framework:platform",
        "@bazel_features//:features",
        "@bazel_skylib//lib:collections",
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/cpp:toolchain_utils.bzl",
    ],
)

bzl_library(
    name = "make_env_vars",
    srcs = ["make_env_vars.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":cc_toolchain_util",
        ":framework",
    ],
)

bzl_library(
    name = "make_script",
    srcs = ["make_script.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [":make_env_vars"],
)

bzl_library(
    name = "ninja_script",
    srcs = ["ninja_script.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        ":make_env_vars",
        ":make_script",
    ],
)

bzl_library(
    name = "transitions",
    srcs = ["transitions.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = ["//foreign_cc:providers"],
)

bzl_library(
    name = "detect_xcompile",
    srcs = ["detect_xcompile.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = ["//foreign_cc/private/framework:platform"],
)

bzl_library(
    name = "detect_root",
    srcs = ["detect_root.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
)

bzl_library(
    name = "run_shell_file_utils",
    srcs = ["run_shell_file_utils.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
)

bzl_library(
    name = "resource_sets",
    srcs = ["resource_sets.bzl"],
    visibility = ["//foreign_cc:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:resource_sets",
        "@bazel_skylib//rules:common_settings",
        "@rules_shell//shell:rules_bzl",
    ],
)
